--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
-          <p><a href="mailto:examplemail@gmail.com">Example@gmail.com</a></p>
+          <p><a href="norbertndayisenga@gmail.com">norbertndayisenga@gmail.com</a></p>
         </div>
         <div class="contact-info-container">
           <img
@@ -359,7 +359,7 @@
             alt="LinkedIn icon"
             class="icon contact-icon"
           />
-          <p><a href="https://www.linkedin.com">LinkedIn</a></p>
+          <p><a href="https://www.linkedin.com/in/ndayisenganorbert/">LinkedIn</a></p>
         </div>
       </div>
     </section>
@@ -374,7 +374,7 @@
           </ul>
         </div>
       </nav>
-      <p>Copyright &#169; 2023 John Doe. All Rights Reserved.</p>
+      <p>Copyright &#169; 2023 Norbert Ndayisenga. All Rights Reserved.</p>
     </footer>
     <script src="script.js"></script>
   </body>
