--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/p1.jpg"
+                src="./assets/P-1.jpg"
                 alt="Project 1"
                 class="project-img"
               />
