--- a/index.html
+++ b/index.html
@@ -316,17 +316,17 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project Three</h2>
+            <h2 class="experience-sub-title project-title">Serv</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://oluwatobi-omotoshos-team.adalo.com/serv?_gl=1%2A8r91xz%2A_ga%2ANzA3NjkwMjM0LjE3MDYyMzIzNzY.%2A_ga_SWT45DV35L%2AMTcwNjM0NzI4Ni42LjEuMTcwNjM0NzMyOC4xOC4wLjA&target=998942e43ce445e7a8ed43cc51862f42&params=%7B%7D'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://oluwatobi-omotoshos-team.adalo.com/serv?_gl=1%2A8r91xz%2A_ga%2ANzA3NjkwMjM0LjE3MDYyMzIzNzY.%2A_ga_SWT45DV35L%2AMTcwNjM0NzI4Ni42LjEuMTcwNjM0NzMyOC4xOC4wLjA&target=998942e43ce445e7a8ed43cc51862f42&params=%7B%7D'"
               >
                 Live Demo
               </button>
