--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/P-1.jpg"
+                src="./assets/i1 1.png"
                 alt="Project 1"
                 class="project-img"
               />
