--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <div class="section-container">
         <div class="section__pic-container">
           <img
-            src="./assets/about-pic.png"
+            src="./assets/IMG 1.png"
             alt="Profile picture"
             class="about-pic"
           />
