--- a/index.html
+++ b/index.html
@@ -105,11 +105,11 @@
           </div>
           <div class="text-container">
             <p>
-              As a skilled web developer, you excel in coding languages and frameworks, 
+              As a skilled web developer, I excel in coding languages and frameworks, 
               crafting visually appealing and user-friendly websites. 
-              Your meticulous attention to detail ensures optimal performance, 
-              while your passion for innovation drives you to explore new technologies. 
-              With a collaborative mindset, you turn concepts into dynamic online experiences.
+              My meticulous attention to detail ensures optimal performance, 
+              while my passion for innovation drives me to explore new technologies. 
+              With a collaborative mindset, I turn concepts into dynamic online experiences.
             </p>
           </div>
         </div>
